p2/tools/pod-config.yaml
apiVersion: v1
kind: Pod
metadata:
  name: iot-pod
  labels:
    app.kubernetes.io/name: iot-testing
spec:
  containers:
  - name: iot-app-1
    image: theterror/iot-app-1:simple-webpage
    ports:
      - containerPort: 80
        name: iot-http-port
