p2/tools/iot-service-app-two.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-two
spec:
  selector:
    app.iot.deployment/name: app-two
  ports:
    - protocol: TCP
      port: 1880
      name: iot-svc-port
      targetPort: http-port
