p2/tools/iot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iot-service
spec:
  selector:
    app.kubernetes.io/name: iot-testing
  ports:
    - protocol: TCP
      port: 1880
      name: iot-svc-port
      targetPort: iot-http-port
